--- a/EasyLearn/UI/CustomControls/User/UserView.xaml
+++ b/EasyLearn/UI/CustomControls/User/UserView.xaml
@@ -1,27 +1,22 @@
-﻿<UserControl x:Class="EasyLearn.UI.CustomControls.VerbPrepositionDictionaryView"
+﻿<UserControl x:Class="EasyLearn.UI.CustomControls.UserView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:valudationRules="clr-namespace:EasyLearn.Infrastructure.Validation"
-             xmlns:constants="clr-namespace:EasyLearn.Data.Constants;assembly=EasyLearn.Data"
              xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
+             mc:Ignorable="d">
 
     <materialDesign:Flipper Style="{DynamicResource MaterialDesignCardFlipper}" 
                             materialDesign:ShadowAssist.ShadowDepth="Depth0"
                             Margin="18 18 0 0"
-                            Height="256"
-                            Width="200"
-                            d:IsFlipped="True"
                             IsFlipped="{Binding IsCardFlipped, Mode=TwoWay}">
 
+        <!--Лицевая сторона карточки-->
         <materialDesign:Flipper.FrontContent>
-
-            <Border BorderThickness="0.6" BorderBrush="#99bbff" Background="GhostWhite">
+            <Border BorderThickness="0.6" BorderBrush="{DynamicResource MainColorLight}" Background="GhostWhite">
                 <Grid Height="256" Width="200">
 
                     <Grid.RowDefinitions>
@@ -30,9 +25,9 @@
                     </Grid.RowDefinitions>
 
                     <!--Пространство с картинкой и закрашенным фоном-->
-                    <materialDesign:ColorZone Background="{DynamicResource MainColorLight}" VerticalAlignment="Stretch">
+                    <materialDesign:ColorZone Mode="PrimaryLight" VerticalAlignment="Stretch" Background="#99bbff">
 
-                        <materialDesign:PackIcon Kind="AboutCircle" 
+                        <materialDesign:PackIcon Kind="AccountCircle" 
                                              Height="128" 
                                              Width="128"
                                              VerticalAlignment="Center" 
@@ -40,7 +35,7 @@
 
                     </materialDesign:ColorZone>
 
-                    <!--Кнопка перехода на заднюю сторону карточки (настройки словаря)-->
+                    <!--Кнопка перехода на заднюю сторону карточки (настройки аккаунта)-->
                     <Button Style="{DynamicResource MaterialDesignFlatButton}"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
@@ -49,7 +44,7 @@
                         Height="30"
                         Padding="1"
                         Margin="0 6 6 0"
-                        ToolTip="Настройки словаря">
+                        ToolTip="Настройки аккаунта">
 
                         <materialDesign:PackIcon Kind="AccountDetails" 
                                              Width="22" 
@@ -60,7 +55,7 @@
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="Click">
                                 <i:InvokeCommandAction Command="{Binding FlipBackAllAnotherCardsCommand}"/>
-                                <i:InvokeCommandAction Command="{Binding SetEditFieldsValueCommand}"/>
+                                <i:InvokeCommandAction Command="{Binding SetEditNameFieldValueCommand}"/>
                                 <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
@@ -79,32 +74,62 @@
                         <StackPanel Orientation="Horizontal"
                                 HorizontalAlignment="Center"
                                 Grid.Row="0">
-                            <TextBlock Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Text="{Binding Name}" FontSize="15"/>
+                            <TextBlock Text="{Binding Name}" Style="{DynamicResource MaterialDesignSubtitle2TextBlock}" FontSize="14"/>
                         </StackPanel>
+
+                        <!--Кнопка авторизации на аккаунте-->
+                        <Button Style="{DynamicResource MaterialDesignFlatButton}"                            
+                            Foreground="Black"
+                            HorizontalAlignment="Center"
+                            Content="Войти"
+                            Visibility="{Binding IsCurrent, Converter={converters:ReverseVisibilityConverter}}"
+                            Grid.Row="1"
+                            Margin="0 3 0 0"
+                            ToolTip="Войти на аккаунт"
+                            Command="{Binding SetUserAsCurrentCommand}"/>
+
+                        <!--Надпись "текущий аккаунт"-->
+                        <StackPanel Orientation="Horizontal"
+                                Grid.Row="1"
+                                Visibility="{Binding IsCurrent, Converter={converters:ForwardVisibilityConverter}}"
+                                HorizontalAlignment="Center"
+                                Margin="0 3 0 0">
+
+                            <TextBlock Text="Текущий аккаунт"                             
+                               FontSize="15"
+                               Margin="0 5 0 0"
+                               FontWeight="Bold"
+                               Foreground="ForestGreen"/>
+
+                            <materialDesign:PackIcon Kind="CheckCircle" 
+                                                 Width="14" Height="14"
+                                                 Margin="4 0 0 0"
+                                                 Foreground="ForestGreen"
+                                                 VerticalAlignment="Center"/>
+
+                        </StackPanel >
+
 
                     </Grid>
 
                 </Grid>
             </Border>
-
+            
         </materialDesign:Flipper.FrontContent>
 
         <!--Задняя сторона карточки-->
         <materialDesign:Flipper.BackContent>
-
-
-            <Border BorderThickness="0.6" BorderBrush="#99bbff" Background="GhostWhite">
+            <Border BorderThickness="0.6" BorderBrush="{DynamicResource MainColorLight}" Background="GhostWhite">
                 <Grid Height="256" Width="200">
 
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="0.8*" />
-                        <RowDefinition Height="2*"/>
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
                     <!--Шапка-->
-                    <materialDesign:ColorZone Background="{DynamicResource MainColorLight}" Padding="6">
+                    <materialDesign:ColorZone Background="#99bbff" Padding="6">
 
                         <StackPanel Orientation="Horizontal">
 
@@ -118,27 +143,28 @@
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-                                        <i:InvokeCommandAction Command="{Binding EditVerbPrepositionDictionaryCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding EditUserCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
+
                             </Button>
 
                             <TextBlock Margin="8 0 0 0" 
                                    VerticalAlignment="Center"
-                                   Text="Настройки словаря"/>
+                                   Text="Настройки аккаунта"/>
 
                         </StackPanel>
                     </materialDesign:ColorZone>
 
-                    <!--Редактировать название словаря-->
-                    <TextBox materialDesign:HintAssist.Hint="Название" 
+                    <!--Редактировать имя пользвателя-->
+                    <TextBox materialDesign:HintAssist.Hint="Имя пользователя" 
                          materialDesign:HintAssist.IsFloating="True"
-                         Grid.Row="1"         
-                         
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Stretch"
-                         Style="{DynamicResource MaterialDesignFilledTextBox}"
-                         Text="{Binding EditNameFieldValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                         Grid.Row="1"
+                         Margin="0 12 0 0"
+                         Width="172"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Top"
+                         Text="{Binding EditNameFieldValue, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
 
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="TextChanged">
@@ -147,57 +173,22 @@
                         </i:Interaction.Triggers>
                     </TextBox>
 
-                    <!--Редактировать описание словаря-->
-                    <TextBox TextWrapping="Wrap"
-                         VerticalAlignment="Stretch"
-                         HorizontalAlignment="Stretch"
-                         Style="{DynamicResource MaterialDesignFilledTextBox}"
-                         materialDesign:HintAssist.Hint="Описание"
-                         materialDesign:HintAssist.IsFloating="True"
-                         materialDesign:ValidationAssist.UsePopup="False"
-                         Grid.Row="2">
+                    <!--Кнопка удаления аккаунта-->
+                    <Button Grid.Row="2" 
+                        Margin="30 12 30 12" 
+                        Command="{Binding RemoveUserCommand}"
+                        Foreground="Red"
+                        Style="{DynamicResource MaterialDesignFlatButton}"
+                        ToolTip="Удалить аккаунт"
+                        VerticalAlignment="Bottom">
 
-                        <TextBox.Text>
-                            <Binding Path="EditDescriptionFieldValue" UpdateSourceTrigger="PropertyChanged">
-                                <Binding.ValidationRules>
-                                    <valudationRules:InRange Max="{x:Static constants:ModelConstants.DictionaryDescriptionMaxLength}" Group="AddCommonRelation" ValidatesOnTargetUpdated="True"/>
-                                </Binding.ValidationRules>
-                            </Binding>
-                        </TextBox.Text>
-                    </TextBox>
-
-                    <Grid Grid.Row="3" HorizontalAlignment="Stretch">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-
-                        <!--Кнопка удаления словаря-->
-                        <Button Command="{Binding RemoveVerbPrepositionDictionaryCommand}"
-                            Foreground="{DynamicResource error}"
-                            Height="40"
-                            Style="{DynamicResource MaterialDesignFlatButton}"
-                            HorizontalAlignment="Stretch"
-                            Grid.Column="0">
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                                <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                            </StackPanel>
-                        </Button>
-
-                        <!--Кнопка открытия словаря-->
-                        <Button HorizontalAlignment="Stretch"
-                            Command="{Binding OpenCurrentVerbPrepositionDictionaryCommand}"
-                            Height="40"
-                            Foreground="{DynamicResource green}"
-                            Style="{DynamicResource MaterialDesignFlatButton}"
-                            Grid.Column="1"
-                            Content="Открыть">
-                        </Button>
-                    </Grid>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        </StackPanel>
+                    </Button>
                 </Grid>
             </Border>
-
             
         </materialDesign:Flipper.BackContent>
     </materialDesign:Flipper>
