--- a/EasyLearn/UI/Pages/DictionariesPage.xaml
+++ b/EasyLearn/UI/Pages/DictionariesPage.xaml
@@ -10,8 +10,7 @@
       xmlns:constants="clr-namespace:EasyLearn.Data.Constants;assembly=EasyLearn.Data"
       xmlns:validation="clr-namespace:EasyLearn.Infrastructure.Validation"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ListsPage" Background="GhostWhite">
+      d:DesignHeight="450" d:DesignWidth="800">
 
     <materialDesign:DialogHost>
 
@@ -26,17 +25,7 @@
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
 
-            <Button Height="50"
-                    Width="50"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom"
-                    Margin="30"
-                    Style="{DynamicResource MaterialDesignFloatingActionButton}"
-                    Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
-
-                <materialDesign:PackIcon Kind="Plus"
-                                         Height="30"
-                                         Width="30"/>
+            <Button Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}" Visibility="Collapsed" Name="addNewDictionaryButton">
 
                 <Button.CommandParameter>
                     <StackPanel Margin="14">
