--- a/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
@@ -9,7 +9,7 @@
       xmlns:valudationRules="clr-namespace:EasyLearn.Infrastructure.Validation"
       mc:Ignorable="d" 
       xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
-      d:DesignHeight="450" d:DesignWidth="800" Background="GhostWhite">
+      d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:DialogHost>
         <Grid >
 
@@ -306,7 +306,7 @@
                                           Grid.ColumnSpan="3">
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
-                                        <WrapPanel Orientation="Horizontal"/>
+                                        <StackPanel/>
                                     </ItemsPanelTemplate>
                                 </ItemsControl.ItemsPanel>
                             </ItemsControl>
