--- a/EasyLearn/UI/Pages/EditVerbPrepositionDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditVerbPrepositionDictionaryPage.xaml
@@ -7,7 +7,7 @@
       xmlns:validation="clr-namespace:EasyLearn.Infrastructure.Validation"
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800" Background="GhostWhite">
+      d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:DialogHost>
         <Grid>
 
