--- a/EasyLearn/UI/Pages/UsersPage.xaml
+++ b/EasyLearn/UI/Pages/UsersPage.xaml
@@ -9,8 +9,7 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AccountsPage"
-      Background="GhostWhite">
+      Title="AccountsPage">
 
     <materialDesign:DialogHost>
 
@@ -26,20 +25,9 @@
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
 
-            <Button Height="50"
-                    Width="50"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom"
-                    Margin="30"
-                    Name="addNewUserButton"
-                    Style="{DynamicResource MaterialDesignFloatingActionButton}"
+            <Button Name="addNewUserButton"
+                    Visibility="Collapsed"
                     Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
-
-                <materialDesign:PackIcon Kind="Plus"
-                                         Height="30"
-                                         Width="30"/>
-
-
                 <Button.CommandParameter>
                     <StackPanel Margin="14">
 
